# W4S

./: .gitignore  README.md  pyproject.toml
datasets/: humaneval_test.jsonl
src/: convert_data.py  main.py  train.py
src/agent/: __init__.py  executor_agent.py  meta_agent.py
src/tasks/: __init__.py  task_base.py
src/tasks/gsmhard/: __init__.py  prompt.py  task_gsmhard.py
src/utils/: helper.py  sanitize.py
